--- a/overlay/Base.lproj/Main.storyboard
+++ b/overlay/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -25,8 +25,12 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <view contentMode="scaleToFill" id="QZk-pz-7oz">
+                                                    <rect key="frame" x="30" y="15" width="50" height="50"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                                </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cxT-qn-und">
-                                                    <rect key="frame" x="85" y="23" width="191" height="49"/>
+                                                    <rect key="frame" x="100" y="16" width="191" height="49"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="28"/>
                                                     <nil key="highlightedColor"/>
@@ -35,6 +39,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.95923504739999998" green="1" blue="0.74620321919999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
+                                            <outlet property="circleView" destination="QZk-pz-7oz" id="9Za-bN-QHA"/>
                                             <outlet property="topicNameLabel" destination="cxT-qn-und" id="m5k-SV-qbZ"/>
                                         </connections>
                                     </tableViewCell>
@@ -61,7 +66,7 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="694" y="347"/>
+            <point key="canvasLocation" x="693.5" y="346.5"/>
         </scene>
         <!--Topic View Controller-->
         <scene sceneID="F9d-c5-r5u">
